--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,12 @@
 @import "assets/scss/trumps/clearfix";
 @import "assets/scss/trumps/utilities";
 
+#bacterium {
+    position: fixed;
+    top: 0;
+  
+    width: 50% !important;
+    height: 50% !important;
+
+}
+
