--- a/src/assets/scss/components/_container--acceuil.scss
+++ b/src/assets/scss/components/_container--acceuil.scss
@@ -1,31 +1,37 @@
-*{
+* {
     // border:red 1px solid;
 }
-.container--acceuil{
+
+.container--acceuil {
     color: white;
     position: relative;
     display: flex;
     width: 100%;
     height: 100%;
-    .acceuil--left{
+
+    .acceuil--left {
         display: flex;
         align-items: center;
-        position:relative;
-        .acceuil--content{
-            position: absolute;          
+        position: relative;
+
+        .acceuil--content {
+            position: absolute;
             display: flex;
             margin: auto;
             align-items: center;
-            span{
+
+            span {
                 color: #abababb8;
                 letter-spacing: 0.1rem;
                 font-weight: 100;
-            }           
-            h1{
+            }
+
+            h1 {
                 font-size: 2.8rem;
                 margin: 0;
             }
-            h1::before{
+
+            h1::before {
                 content: "<h1>";
                 font-size: 1rem;
                 font-style: italic;
@@ -34,7 +40,8 @@
                 margin-right: 5px;
                 font-family: "latin_modern_mono_light_c10Ob";
             }
-            h1::after{
+
+            h1::after {
                 content: "</h1>";
                 font-size: 1rem;
                 font-style: italic;
@@ -43,41 +50,51 @@
                 margin-left: 5px;
                 font-family: "latin_modern_mono_light_c10Ob";
             }
-            h4{
+
+            h4 {
                 color: #abababb8;
-                font-size: 0.8rem;
+                    font-size: 1rem;
                 letter-spacing: 0.1rem;
                 text-transform: uppercase;
             }
-          
+
         }
     }
-    .acceuil--right{
+
+    .acceuil--right {
         display: flex;
         align-items: center;
-       position: relative;
+        position: relative;
         margin: 0 15px 0 15px;
         // height:100vh;
+        // filter:url(#gooey);
+        // -webkit-filter:url(#gooey);
 
-        img:nth-child(1){
+        justify-content: center;
+
+
+
+        img:nth-child(1) {
             position: absolute;
             z-index: 2;
-            bottom:0;
-            left:0;
-            right:0;
-            top:0;
-            margin:auto;
+            // bottom:0;
+            left: 0;
+            right: 0;
+            // top: 82px;
+            margin: auto;
         }
-        img:nth-child(2){
+
+        img:nth-child(2) {
             position: absolute;
             z-index: 1;
-            bottom:0;
-            left:0;
-            right:0;
-            top:0;
-            margin:auto;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            top: 0;
+            margin: auto;
         }
-        img:nth-child(3){
+
+        img:nth-child(3) {
             position: absolute;
             z-index: -1;
             bottom: 0;
@@ -87,4 +104,16 @@
             margin: auto;
         }
     }
+}
+
+
+
+svg{ transform-origin: 50%!important }
+
+@keyframes left {
+  100% { transform: rotate(-360deg) ; -webkit-transform: rotate(-360deg) ; -moz-transform: rotate(-360deg) ; -ms-transform: rotate(-360deg) ; -o-transform: rotate(-360deg) ; }
+}
+
+@keyframes right {
+  100% { transform: rotate(360deg) ; -webkit-transform: rotate(360deg) ; -moz-transform: rotate(360deg) ; -ms-transform: rotate(360deg) ; -o-transform: rotate(360deg) ; }
 }
