add new blob and fix innerhtml withparaf mysql

--- a/src/assets/scss/components/_container--acceuil.scss
+++ b/src/assets/scss/components/_container--acceuil.scss
@@ -92,8 +92,9 @@
             right: 0;
             top: 0;
             margin: auto;
+            // background:aqua;
         }
-
+      
         img:nth-child(3) {
             position: absolute;
             z-index: -1;
