--- a/src/assets/scss/components/_menu--burger.scss
+++ b/src/assets/scss/components/_menu--burger.scss
@@ -42,7 +42,7 @@ $split-color:     #FF2C75;
     transform: rotateX(-10deg) rotateY(20deg); // overwritten by JS
     .Menu-list-item {
       position: relative;
-      color: transparent;
+      color: white;
       cursor: pointer;
       
     
