--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -37,7 +37,7 @@
 @import "/components/container--skills";
 @import "/components/container--contact";
 @import "/components/container--project";
-@import "/components/container--work";
+// @import "/components/container--work";
 
 @import "/trumps/clearfix";
 @import "/trumps/utilities";
