--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,8 @@
 @import "assets/scss/components/container--skills";
 @import "assets/scss/components/container--contact";
 @import "assets/scss/components/container--project";
+@import "assets/scss/components/container--work";
+
 
 @import "assets/scss/trumps/clearfix";
 @import "assets/scss/trumps/utilities";
