--- a/src/assets/scss/components/_container--about.scss
+++ b/src/assets/scss/components/_container--about.scss
@@ -5,18 +5,26 @@
     .about--left{
         display: flex;
         align-items: center;
+            h2{
+                z-index: 1;
+                font-size: 4rem;
+                top: 0;
+                position: absolute;
+                top: 141px;
+                // text-transform: capitalize;
+                span{
+                    text-transform: uppercase;
+                }
+            }
         
             img:nth-child(1){
                 position: absolute;
                 z-index: 2;
-            }
-            img:nth-child(2){
-                position: absolute;
-                z-index: 1;
-                // top: -64px;
-            }
-         
-          
+                width: 74%;
+                top: 124px;
+                bottom: 0;
+                margin: auto;
+            }      
         }
     }
     .about--right{
@@ -26,7 +34,7 @@
         margin: 0 15px 0 15px;
         height:100vh;
         justify-content: center;
-        padding-left: 8rem;
+        // padding-left: 8rem;
         .about--content{
           p{
             line-height: 1.5rem;
