--- a/src/assets/scss/components/_container--skills.scss
+++ b/src/assets/scss/components/_container--skills.scss
@@ -10,18 +10,21 @@
             img:nth-child(1){
                 position: absolute;
                 z-index: 2;
-                top:44%;
+                width: 74%;
+                top: 96px;
+                bottom: 0;
+                margin: auto;
             }
             img:nth-child(2){
                 position: absolute;
                 z-index: 1;              
             }
             h2{
-                position: absolute;
                 z-index: 1;
                 font-size: 4rem;
-                bottom: 371px;
-                text-transform: capitalize;
+                top: 0;
+                position: absolute;
+                top: 75px;
             }
          
           
