--- a/src/assets/scss/components/_header--website.scss
+++ b/src/assets/scss/components/_header--website.scss
@@ -9,7 +9,8 @@
         // background-color: var(--bg-logo);   
 
         img{
-            box-sizing: border-box;            
+            box-sizing: border-box;     
+            width: 100%;       
         }
     }
     .navbar--burger{
@@ -37,7 +38,10 @@
         flex-direction: row;
         align-items: center;
         .header--logo{     
-            padding: 1rem 1.9rem 1rem 1.9rem;            
+            padding: 1rem 1.9rem 1rem 1.9rem;      
+            img{
+                max-width: 50px;
+            }      
         }
         .navbar--burger{ 
             max-width: 19%;
