--- a/src/assets/scss/components/_main--website.scss
+++ b/src/assets/scss/components/_main--website.scss
@@ -4,6 +4,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    // overflow: hidden;
 }
 @media screen and (min-width: 320px) {
     .main--website{
