--- a/src/assets/scss/generic/_normalize.scss
+++ b/src/assets/scss/generic/_normalize.scss
@@ -1,15 +1,11 @@
-:root {
-    --bg-primary: #1E1E1E;  
-    --icon-svg: #dad8d8;
-    --bg-logo: #151515;
-    --bg-header: #232323;
-    --bg-burgerIcon : white;
-    --color-btn: #08fdd8;
-  }
+
   a{
     text-decoration: none;
   }
-
+  .Blob_Shape{
+    background-color: #0dca7b;
+    position: absolute;
+}
 
 body{
     height:100vh;
