--- a/src/assets/scss/components/_container--contact.scss
+++ b/src/assets/scss/components/_container--contact.scss
@@ -5,55 +5,62 @@
     align-items: center;
     justify-content: center;
     .contact--left{
+        
+        position: relative;
+        height: 100vh;
         display: flex;
         align-items: center;
-        p{
-            line-height: 1.5rem;
-          }
-             span{
-                color: #abababb8;
-                letter-spacing: 0.1rem;
-                font-weight: 100;
-            }           
-        
-           ul{
-               padding: 0;
-               li{
-                display: flex;
-                align-items: center;
-                margin-bottom: 1rem;
-               }
-               li:nth-child(1)::before{
-                content: '📧';
-                font-size: 2rem;
-                width: 50px;
-                display: flex;
-                align-items: flex-start;
-                justify-content: left;
-               }
-               li:nth-child(2)::before{
-                content: '📱';
-                font-size: 2rem;
-                width: 50px;
-                display: flex;
-                align-items: flex-start;
-                justify-content: left;
-               }
-           }
-         
+        justify-content: center;
+        .contact--content{          
+            width: 100%;
+          
+            height: 60%;
+            position: relative;
+            img{
+                position: absolute;
+                z-index: 3;
+                max-width: 410px;
+                right: 0;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                margin: auto;   
+            }
+            h2{
+                position: absolute;
+                z-index: 1;
+                margin: 0;
+                /* bottom: 237px; */
+                font-size: 7rem;
+                top: 18px;
+                margin: auto;
+                            
+            }
+            .Blob_Shape{
+                position: absolute;
+                z-index: -1;               
+            }
+        }
+     
+      
           
         }
     }
     .contact--right{
         display: flex;
         align-items: center;
-       position: relative;
+        position: relative;
         margin: 0 15px 0 15px;
-        height:100vh;
+        height: 100vh;
         justify-content: center;
-        // padding-left: 8rem;
+        padding: 0 5rem 0 5rem;
+        flex-direction: column;
         form{
-            max-width: 74%;
+            max-width: 100%;
             width: 100%;
+        }
+        p{
+            font-size: 1rem;
+            line-height: 1.4rem;
         }
 }
