--- a/src/assets/scss/components/_container--work.scss
+++ b/src/assets/scss/components/_container--work.scss
@@ -23,4 +23,47 @@
 .container--work{
     width: 100%;
     height: 100%;
+    .img--items{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: red;
+        h5{
+            position: absolute;
+            margin: 0;
+            font-size: 1.1rem;           
+            font-weight: bold;
+            color: #0f0f0f;          
+            font-family: "latobold";    
+            text-align: center;    
+            display: none;
+        }
+        a{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+           
+        }
+        &.img--items:hover{
+       
+       
+
+            h5{
+           
+                display: block;
+            }
+
+            a{
+                transition:all 0.5s;
+                img{
+                    transition:all 0.5s;
+                    opacity: 0.3;
+                }
+            }
+
+        }
+        
+    }
 }
