--- a/src/assets/scss/elements/_Slider.scss
+++ b/src/assets/scss/elements/_Slider.scss
@@ -1,170 +1,106 @@
-$text: #2e293c;
-$secondary: #a09da6;
-
-html,
-body {
-  font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.active {
+  display: block !important;
+  // -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  // animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-.testimonial-section {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  &:after {
-    content: "";
-    position: absolute;
-    width: 900px;
-    height: 550px;
-    background: #f2f2f6;
-    right: 0;
-    bottom: 0;
-    opacity: 0.8;
-    z-index: -10;
-  }
-  .testimonial-container {
-    width: 1280px;
-    min-width: 1280px;
-    height: 600px;
-    position: relative;
-    .arrows {
-      position: absolute;
-      display: flex;
-      width: 100px;
-      align-items: center;
-      justify-content: center;
-      bottom: 0;
-      top: 0;
-      cursor: pointer;
-      border-radius: 8px;
-      transition: 0.3s ease-in-out;
-      &:hover {
-        box-shadow: 0px 0px 30px rgba(0, 0, 80, 0.05);
-      }
-      &.right {
-        right: 0;
-      }
-    }
-    .inner {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 600px;
-      .t-image {
-        width: 500px;
-        height: 600px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &:after {
-          content: "";
-          position: absolute;
-          width: 200px;
-          height: 200px;
-          background: #3f56da;
-          left: 140px;
-          top: 0;
-          border-radius: 100%;
-          z-index: -9;
-        }
-        ul {
-          display: flex;
-          position: absolute;
-          overflow: hidden;
-          height: 460px;
-          width: 340px;
-          box-shadow: 0px 0px 40px rgba(0, 0, 10, 0.25);
-          li {
-            height: 460px;
-            width: 340px;
-            img {
-              height: 460px;
-              width: 340px;
-            }
-          }
-        }
-      }
-      .t-content {
-        width: 500px;
-        height: 600px;
-        display: flex;
-        align-items: center;
-        ul {
-          position: absolute;
-          overflow: hidden;
-          width: 500px;
-          height: 400px;
-          li {
-            width: 500px;
-            height: 400px;
-            color: $text;
-            display: flex;
-            align-items: center;
-            position: absolute;
-            opacity: 0;
-            &:nth-child(1) {
-              &:after {
-                content: "";
-                position: absolute;
-                height: 12px;
-                width: 310px;
-                background: $text;
-                opacity: 0.3;
-                left: 0;
-                top: 206px;
-              }
-            }
-            &:nth-child(2) {
-              &:after {
-                content: "";
-                position: absolute;
-                height: 12px;
-                width: 148px;
-                background: $text;
-                opacity: 0.3;
-                left: 54px;
-                top: 126px;
-              }
-            }
-            &:nth-child(3) {
-              &:after {
-                content: "";
-                position: absolute;
-                height: 12px;
-                width: 280px;
-                background: $text;
-                opacity: 0.3;
-                left: 144px;
-                top: 166px;
-              }
-            }
-            .content-inner {
-              width: 500px;
-              .quote {
-                font-size: 26px;
-                letter-spacing: 0.88px;
-                line-height: 40px;
-                font-weight: 700;
-                margin-bottom: 16px;
-              }
-              .name {
-                font-size: 18px;
-                letter-spacing: 0.88px;
-                line-height: 28px;
-                color: $secondary;
-                font-weight: 600;
-              }
-              .title {
-                font-size: 18px;
-                letter-spacing: 0.88px;
-                line-height: 28px;
-                color: $secondary;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
+
+
+
+.slide--items {
+  display: none;
 }
+
+#btn--prev,
+#btn--next {
+  display: none;
+}
+
+
+
+//   .container--skills{
+//     color: white;
+//     position: relative;
+//     display: flex;
+//     .skills--left{
+//         display: flex;
+//         align-items: center;
+//         position: relative;
+        
+//             img:nth-child(1){
+//                 position: absolute;
+//                 z-index: 2;
+//                 width: 74%;
+//                 top: 96px;
+//                 bottom: 0;
+//                 margin: auto;
+//             }
+//             img:nth-child(2){
+//                 position: absolute;
+//                 z-index: 1;              
+//             }
+//             h2{
+//                 z-index: 1;
+//                 font-size: 4rem;
+//                 top: 0;
+//                 position: absolute;
+//                 top: 75px;
+               
+//             }
+         
+//           .set--arrow{
+//             bottom: 0;
+//             position: absolute;
+//               i{
+//                   color: white;
+//               }
+//           }
+//         }
+//     }
+//     .skills--right{
+//         display: flex;
+//         align-items: center;
+//         position: relative;
+//         margin: 0 15px 0 15px;
+//         height:100vh;
+//         justify-content: center;
+       
+//         .skills--content{
+//             position:absolute;
+        
+//           p{
+//             line-height: 1.5rem;
+//           }
+//              span{
+//                 color: #abababb8;
+//                 letter-spacing: 0.1rem;
+//                 font-weight: 100;
+//             }           
+//             h1{
+//                 font-size: 2.8rem;
+//                 margin: 0;
+//             }
+//             h1::before{
+//                 content: "<h1>";
+//                 font-size: 1rem;
+//                 font-style: italic;
+//                 font-weight: 100;
+//                 color: #ffffff4a;
+//                 margin-right: 5px;
+//                 font-family: "latin_modern_mono_light_c10Ob";
+//             }
+//             h1::after{
+//                 content: "</h1>";
+//                 font-size: 1rem;
+//                 font-style: italic;
+//                 font-weight: 100;
+//                 color: #ffffff4a;
+//                 margin-left: 5px;
+//                 font-family: "latin_modern_mono_light_c10Ob";
+//             }
+//             li:before{
+//                 content:"👉";
+//             }
+          
+//     }
+// }
