--- a/src/assets/scss/tools/_animation.scss
+++ b/src/assets/scss/tools/_animation.scss
@@ -91,73 +91,51 @@
   -webkit-animation: animate2 5s linear infinite;
 }
 
-@keyframes animate1{
-  0%{
-    transform: translateX(0)   ;
-    -webkit-transform: translateX(0)   ;
-    -moz-transform: translateX(0)   ;
-    -ms-transform: translateX(0)   ;
-    -o-transform: translateX(0)   ;
-}
-30%{
-  transform: translateX(20px)  ;
-  -webkit-transform: translateX(20px)  ;
-  -moz-transform: translateX(20px)  ;
-  -ms-transform: translateX(20px)  ;
-  -o-transform: translateX(20px)  ;
-}
-60%{
-  transform: translateX(20px);
-  -webkit-transform: translateX(20px);
-  -moz-transform: translateX(20px);
-  -ms-transform: translateX(20px);
-  -o-transform: translateX(20px);
-}
-100%{
-  transform: translateX(0);
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-}
-}
-
-@keyframes animate2{
-  0%{
-    transform: translateX(0);
+@-webkit-keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+            transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
     -webkit-transform: translateX(0);
-    -moz-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
 }
-30%{
-  transform: translateX(-20px);
-  -webkit-transform: translateX(-20px);
-  -moz-transform: translateX(-20px);
-  -ms-transform: translateX(-20px);
-  -o-transform: translateX(-20px);
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+            transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
 }
-60%{
-  transform: translateX(-20px);
-  -webkit-transform: translateX(-20px);
-  -moz-transform: translateX(-20px);
-  -ms-transform: translateX(-20px);
-  -o-transform: translateX(-20px);
+@-webkit-keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+            transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
 }
-100%{
-  transform: translateX(0);
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-}
-}
-.testSVG{
-  width: 0;
-  height: 0;
-}
-
-.container--bubbles{
-  filter:url(#gooey);
-  -webkit-filter:url(#gooey);
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+            transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
 }
