--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@
 @import "assets/scss/components/container--project";
 @import "assets/scss/components/container--work";
 
-@import "assets/scss/elements/_Slider.scss";
+@import "assets/scss/elements/Slider";
 
 @import "assets/scss/trumps/clearfix";
 @import "assets/scss/trumps/utilities";
