--- a/src/assets/scss/elements/_Slider.scss
+++ b/src/assets/scss/elements/_Slider.scss
@@ -1,5 +1,5 @@
 .active {
-  display: block !important;
+  display: flex !important;
   // -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   // animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
