--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@
 @import "assets/scss/tools/mixins";
 @import "assets/scss/tools/animation";
 @import "assets/scss/tools/cursor";
+@import "assets/scss/tools/loading";
 
 @import "assets/scss/generic/reset";
 @import "assets/scss/generic/normalize";
