--- a/src/assets/scss/components/_container--acceuil.scss
+++ b/src/assets/scss/components/_container--acceuil.scss
@@ -1,108 +1,48 @@
-* {
-    // border:red 1px solid;
-}
-
 .container--acceuil {
     color: white;
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 100%;
+   
 
-    .acceuil--left {
-        display: flex;
-        align-items: center;
-        position: relative;
-
-        .acceuil--content {
-            position: absolute;
-            display: flex;
-            margin: auto;
-            align-items: center;
-
+    .acceuil--left {     
+           
+            // margin: auto;
             span {
                 color: #abababb8;
                 letter-spacing: 0.1rem;
                 font-weight: 100;
             }
 
-            h1 {
-                font-size: 2.8rem;
-                margin: 0;
-            }
-
-            h1::before {
-                content: "<h1>";
-                font-size: 1rem;
-                font-style: italic;
-                font-weight: 100;
-                color: #ffffff4a;
-                margin-right: 5px;
-                font-family: "latin_modern_mono_light_c10Ob";
-            }
-
-            h1::after {
-                content: "</h1>";
-                font-size: 1rem;
-                font-style: italic;
-                font-weight: 100;
-                color: #ffffff4a;
-                margin-left: 5px;
-                font-family: "latin_modern_mono_light_c10Ob";
+            h1 {           
+            
             }
 
             h4 {
-                color: #abababb8;
-                    font-size: 1rem;
+                color: #abababb8;           
                 letter-spacing: 0.1rem;
                 text-transform: uppercase;
             }
 
-        }
+      
     }
 
-    .acceuil--right {
-        display: flex;
-        align-items: center;
-        position: relative;
-        margin: 0 15px 0 15px;
-        // height:100vh;
-        // filter:url(#gooey);
-        // -webkit-filter:url(#gooey);
-
-        justify-content: center;
-
-
-
+    .acceuil--right {  
+       
+        z-index: -11;
+    
         img:nth-child(1) {
             position: absolute;
-            z-index: 2;
-            // bottom:0;
-            left: 0;
-            right: 0;
-            // top: 82px;
+            z-index: 2;            
             margin: auto;
         }
 
         img:nth-child(2) {
-            position: absolute;
-            z-index: 1;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            top: 0;
-            margin: auto;
-            // background:aqua;
+            position: relative;
+            z-index: 1;          
+                  
         }
       
         img:nth-child(3) {
-            position: absolute;
-            z-index: -1;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            top: -104px;
-            margin: auto;
+            position: relative;
+            z-index: -1;         
         }
     }
 }
@@ -118,3 +58,196 @@ svg{ transform-origin: 50%!important }
 @keyframes right {
   100% { transform: rotate(360deg) ; -webkit-transform: rotate(360deg) ; -moz-transform: rotate(360deg) ; -ms-transform: rotate(360deg) ; -o-transform: rotate(360deg) ; }
 }
+
+
+
+
+
+@media screen and (min-width: 320px) {
+    .container--acceuil {
+        position: relative;
+        // top: 20px;
+        .acceuil--left {
+          
+
+           
+
+              h1{
+                font-size: 2rem;
+                margin: 0;
+              }
+              h4{
+                  font-size: 0.7rem;
+              }
+
+          
+        }
+        .acceuil--right {  
+         
+        
+            img:nth-child(1) {
+              max-width: 181px;
+              bottom: 0;
+              left:auto;
+              right: 0;
+              top: 0;
+              margin: auto;
+            }
+            .Blob_Shape{
+                max-width: 143px;
+                max-height: 143px;
+                left: 58px;
+                /* right: -75px; */
+                top: 5px;
+                bottom: 0;
+                margin: auto;
+            }         
+          
+            img:nth-child(3) {
+                max-width: 181px;
+                bottom: 0;
+                left: 102px;
+                /* right: 0; */
+                top: -104px;
+                margin: auto;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 375px) {
+    .container--acceuil {
+        position: relative;
+        top: 0px;
+        .acceuil--left {
+            // margin-top: 58px;
+           
+
+              h1{
+                font-size: 2.5rem;
+              }
+              h4{
+                font-size: 1rem;
+              }
+
+     
+        }
+        .acceuil--right {  
+         
+            img:nth-child(1) {
+           
+            }
+            .Blob_Shape{
+             
+            }         
+          
+            img:nth-child(3) {
+                left: 125px;
+            }
+        }
+    }
+}
+
+
+@media screen and (min-width: 768px) {
+    .container--acceuil {
+        display: flex;
+        align-items: center;
+        height:100%;
+        .acceuil--left {    
+            margin-top: 0;               
+               display: flex;
+                flex-direction: column;
+                align-items: baseline;
+                justify-content: center;
+           
+              h1{
+                  font-size: 2.5rem;
+              } 
+              h4{
+                font-size: 1rem;
+              }
+
+        }
+        .acceuil--right{
+         
+            
+             .Blob_Shape{
+                max-width: 254px;
+                left: 41px;
+                top: 24px;
+                max-height: 237px;
+            }
+            img:nth-child(1) {              
+                max-width: 295px;
+            }
+            img:nth-child(3) {              
+                max-width: 237px;
+                bottom: 158px;
+                position: relative;
+                top: auto;
+                left: 75px;
+            }
+        }
+    }
+}
+
+
+
+@media screen and (min-width: 1024px) {
+    .container--acceuil {
+        .acceuil--left {
+          
+        
+              h1{
+                  font-size: 2.8rem;
+              }
+              h4{
+                font-size: 1rem;
+              }
+      
+        }
+        .acceuil--right{
+             .Blob_Shape{
+           
+            }
+            img:nth-child(1){
+         
+            }
+            img:nth-child(3){
+            
+            }
+        }
+    }
+}
+
+
+@media screen and (min-width: 1280px) {
+    .container--acceuil {
+        .acceuil--left {
+          
+        
+              h1{
+                  font-size: 2.8rem;
+              }
+              h4{
+                font-size: 1.2rem;
+              }
+      
+        }
+        .acceuil--right{
+             .Blob_Shape{
+           left: 20px;
+           top: 27px;
+            }
+            img:nth-child(1){
+         
+            }
+            img:nth-child(3){
+            
+            }
+        }
+    }
+}
+
+
