--- a/src/assets/scss/components/_container--skills.scss
+++ b/src/assets/scss/components/_container--skills.scss
@@ -1,138 +1,132 @@
 .container--skills{
-    color: white;
-    position: relative;
-    display: flex;
-    .skills--left{
-        display: flex;
-        align-items: center;
-        position: relative;
-        
-            img:nth-child(1){
-                position: absolute;
-                z-index: 2;
-                width: 74%;
-                top: 96px;
-                bottom: 0;
-                margin: auto;
-            }
-            img:nth-child(2){
-                position: absolute;
-                z-index: 1;              
-            }
-            h2{
-                z-index: 1;
-                font-size: 4rem;
-                top: 0;
-                position: absolute;
-                top: 75px;
-                // opacity: 0;
-            }
-         
-          .set--arrow{
-            bottom: 0;
-            position: absolute;
-              i{
-                  color: white;
-              }
-          }
-          .Numb0{
-            color: white;
-            display: none;
-            opacity: 0;
-            &.active{
-              opacity: 1;
-              display: block !important;
-              -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-              animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-            }
-          }
-          .Numb1{
-            color: white;
-            display: none;
-            opacity: 0;
-            &.active{
-              opacity: 1;
-              display: block !important;
-              -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-              animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-            }
-          }
-        }
-    }
-    .skills--right{
-        display: flex;
-        align-items: center;
-        position: relative;
-        margin: 0 15px 0 15px;
-        height:100vh;
-        justify-content: center;
-        // padding-left: 5rem;
-        // background-color: #171616;
-        .skills--content{
-            position:absolute;
-            // opacity: 0;
-          p{
-            line-height: 1.5rem;
-          }
-             span{
-                color: #abababb8;
-                letter-spacing: 0.1rem;
-                font-weight: 100;
-            }           
-            h1{
-                font-size: 2.8rem;
-                margin: 0;
-            }
-            h1::before{
-                content: "<h1>";
-                font-size: 1rem;
-                font-style: italic;
-                font-weight: 100;
-                color: #ffffff4a;
-                margin-right: 5px;
-                font-family: "latin_modern_mono_light_c10Ob";
-            }
-            h1::after{
-                content: "</h1>";
-                font-size: 1rem;
-                font-style: italic;
-                font-weight: 100;
-                color: #ffffff4a;
-                margin-left: 5px;
-                font-family: "latin_modern_mono_light_c10Ob";
-            }
-            li:before{
-                content:"👉";
-            }
-          
-    }
-    .Numb0{
-        color: white;
-        display: none;
-        opacity: 0;
-        &.active{
-	        opacity: 1;
-	        display: block !important;
-	        -webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        }
+  color: white;
+
+  
+  .skills--right {
+    .skills--content {
+      p {
+        line-height: 1.5rem;
       }
-      .Numb1{
-        color: white;
-        display: none;
-        opacity: 0;
-        &.active{
-          opacity: 1;
-          display: block !important;
-          -webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        }
+  
+      span {
+        color: #abababb8;
+        letter-spacing: 0.1rem;
+        font-weight: 100;
       }
-  }   
-  .set--arrows{
-    position: absolute;
-    bottom: 32px;
-    width: 234px;
-    display: flex;
-    justify-content: space-between;
+  
+      h1 {
+        margin: 0;
+      }
+  
+      li:before {
+        content: "👉";
+      }
+  
+    }
+  
+    
   }
+  .skills--left{
+    .set--arrows {
+      position: absolute;
+      display: flex;
+      justify-content: space-between;
+    }
+    img{
+      position: absolute;
+      width: 100%;
+      height: auto;
+      margin: auto;
+    }
+  }
+}
+
+
+
+
+@media screen and (min-width: 320px) {
+  .container--skills {
+
+    .skills--right {
+ 
+
+      .skills--content {
+        h1 {
+          font-size: 1.4rem;
+        }
+      }
+    }
+
+    .skills--left {
+      margin-bottom: 35px;
+      h2 {
+        font-size: 2.5rem;
+      }
+      img{
+        display: inline-block;
+        max-width: 265px;
+      }
+      .Blob_Shape{
+        max-width: 196px;
+        max-height: 212px;
+      }
+   
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container--skills {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    top: 87px;
+    position: relative;
+    .skills--left {
+      h2 {
+        font-size: 3rem;
+     
+      }
+      img{
+        position: absolute;
+        max-width: 400px;
+        margin: auto;
+      }
+      .Blob_Shape{
+        max-width: 281px;
+        max-height: 307px;
+      
+      }
+    }
+
+    .skills--right {
+ 
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .container--skills {
+    top:0;
+    .skills--left {
+      h2 {
+           font-size: 2.9rem;
+               max-width: 460px;
+      }
+      img{
+        max-width: 404px;
+        
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1280px){
+  .container--skills{
+    .skills--left{
+      h2{
+        max-width: 460px;
+      }
+    }
+  }
+}
