--- a/src/assets/scss/components/_header--website.scss
+++ b/src/assets/scss/components/_header--website.scss
@@ -2,7 +2,7 @@
 .header--website{
     background-color: var(--bg-header);
     width: 100%;
-    position: absolute;
+    // position: absolute;
     // z-index: 11;
     .header--logo{
         display: flex;       
@@ -31,12 +31,23 @@
         }
     }
 }
+
+
+@media screen and (max-width: 768px){
+    .header--website{
+        // position: absolute;
+        .navbar--logos{
+          display: none;
+        }
+    }
+}
 @media screen and (min-width: 320px) {
     .header--website{
         max-width: 100%;
         display: flex;
         flex-direction: row;
         align-items: center;
+        position: relative;
         .header--logo{     
             padding: 1rem 1.9rem 1rem 1.9rem;      
             img{
@@ -56,16 +67,19 @@
         }      
     }
   }
-  @media screen and (max-width: 768px){
-      .header--website{
-          .navbar--logos{
-            display: none;
-          }
-      }
-  }
+  @media screen and (min-width: 768px){
+    .header--website{
+        position: absolute;
+        .navbar--logos{
+        //   display: none;
+        }
+    }
+}
+  
   @media screen and (min-width: 1024px) {
     .header--website{
         max-width: 83px;        
+        // position:absolute;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -94,5 +108,3 @@
         }
     }
   }
-
-  
