--- a/src/assets/scss/components/_main--website.scss
+++ b/src/assets/scss/components/_main--website.scss
@@ -1,21 +1,32 @@
 .main--website{   
     height: 100%;
-    position: absolute;
+    position: relative;
     width: 100%;
-    display: flex;
-    align-items: center;
-    // overflow: hidden;
+    // display: inline-block;
+    // align-items: center;  
 }
 @media screen and (min-width: 320px) {
-    .main--website{
-       right: auto;
-       bottom: 0;
+    .main--website{ 
+      margin-top: auto;
+      
+      // max-height: calc(100% - 87px);
+      max-width: 100%;
+      margin-right: auto;
+      margin-left: auto;
     }
   }
   @media screen and (min-width: 768px) {
     .main--website{
-        right: 0;
-        bottom: auto;
-        height: 100%;
+        max-height: 100%;
+        max-width: calc(100% - 87px);      
+    }
+  }
+  @media screen and (min-width: 1024px) {
+    .main--website{
+        max-height: 100%;
+        max-width: calc(100% - 87px);
+        margin-left: auto;
+        margin-right: 0;
+
     }
   }
