--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -16,6 +16,7 @@
 @import "/tools/mixins";
 @import "/tools/animation";
 @import "/tools/cursor";
+@import "/tools/loading";
 
 @import "/generic/reset";
 @import "/generic/normalize";
