--- a/src/assets/scss/components/_container--project.scss
+++ b/src/assets/scss/components/_container--project.scss
@@ -1,9 +1,7 @@
 .container--project{
     color: white;
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
     .project--left{
         display: flex;
         align-items: center;
@@ -40,4 +38,15 @@
         justify-content: center;
         // padding-left: 8rem;
        
+}
+@media (min-width:320px){
+    .container--project{
+        // top: 70px;
+    }
+}
+
+@media (min-width:1024px){
+    .container--project{
+        top: 0px;
+    }
 }
