--- a/src/assets/scss/components/_container--work.scss
+++ b/src/assets/scss/components/_container--work.scss
@@ -1,69 +1,58 @@
-.container--project{
-    width: 100%;
-    height: 100%;
-    padding: 0 14rem 0 14rem;
-
-    h2{
-        color: white;
-    }
-
-    p{
-        color: white;
-        a{
-            color: var(--color-btn);
-            text-decoration: none;
-        }
-    }
-    img{
-        margin-bottom: 2rem;
-    }
-
-}
-
 .container--work{
     width: 100%;
     height: 100%;
-    .img--items{
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: red;
-        h5{
-            position: absolute;
+
+    .imghrv-push-down{
+        h4{
             margin: 0;
-            font-size: 1.1rem;           
-            font-weight: bold;
-            color: #0f0f0f;          
-            font-family: "latobold";    
-            text-align: center;    
-            display: none;
         }
-        a{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: white;
-           
-        }
-        &.img--items:hover{
-       
-       
-
-            h5{
-           
-                display: block;
-            }
-
-            a{
-                transition:all 0.5s;
-                img{
-                    transition:all 0.5s;
-                    opacity: 0.3;
-                }
-            }
-
-        }
-        
     }
+   
+}
+
+@media (min-width:320px){
+.container--work{
+    position: relative;
+    top: 0px;
+}
+}
+
+@media (min-width:768px){
+    .container--work{
+    //   top: 77px;
+        .img--items{
+         
+            h5{}
+            a{ }
+            &.img--items:hover{   
+                h5{}
+    
+                a{               
+                    img{}
+                }
+    
+            }
+            
+        }
+    }
+
+}
+@media (min-width:1024px){
+    .container--work{
+        top: 0px;
+          .img--items{
+           
+              h5{}
+              a{ }
+              &.img--items:hover{   
+                  h5{}
+      
+                  a{               
+                      img{}
+                  }
+      
+              }
+              
+          }
+      }
 }
