--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@
 @import "assets/scss/tools/animation";
 @import "assets/scss/tools/cursor";
 @import "assets/scss/tools/loading";
+@import "assets/scss/tools/imageshover";
 
 @import "assets/scss/generic/reset";
 @import "assets/scss/generic/normalize";
