--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -1,13 +1,52 @@
-button{
-    text-transform: uppercase;
-    background-color: transparent;
-    border: transparent;
-    color: var(--color-btn);
-    border: 1px solid var(--color-btn);
-    padding: 0.8rem;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+// button{
+//     text-transform: uppercase;
+//     background-color: transparent;
+//     border: transparent;
+//     color: var(--color-btn);
+//     border: 1px solid var(--color-btn);
+//     padding: 0.8rem;
+//     border-radius: 5px;
+//     -webkit-border-radius: 5px;
+//     -moz-border-radius: 5px;
+//     -ms-border-radius: 5px;
+//     -o-border-radius: 5px;
+// }
+button:hover{cursor: pointer}
+    button {
+        background: transparent;
+        outline: none;
+        position: relative;
+        border: 2px solid #08fdd8;
+        padding: 15px 17px;
+        overflow: hidden;
+        border-radius: 0;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        -ms-border-radius: 0;
+        -o-border-radius: 0;
 }
+
+    /*button:before (attr data-hover)*/
+    button:hover:before{opacity: 1; transform: translate(0,0);}
+    button:before{
+      content: attr(data-hover);
+      position: absolute;
+      top: 1.1em; left: 0;
+      width: 100%;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      font-weight: 800;
+      font-size: .8em;
+      opacity: 0;
+      transform: translate(-100%,0);
+      transition: all .3s ease-in-out;
+    }
+      /*button div (button text before hover)*/
+      button:hover div{opacity: 0; transform: translate(100%,0)}
+      button div{
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        font-weight: 400;
+        font-size: .8em;
+        transition: all .3s ease-in-out;
+      }
