--- a/src/assets/scss/components/_container--skills.scss
+++ b/src/assets/scss/components/_container--skills.scss
@@ -76,11 +76,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .container--skills {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    top: 87px;
+  .container--skills {   
     position: relative;
     .skills--left {
       h2 {
@@ -107,7 +103,10 @@
 
 @media screen and (min-width: 1024px) {
   .container--skills {
-    top:0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     .skills--left {
       h2 {
            font-size: 2.9rem;
