--- a/src/assets/scss/components/_main--website.scss
+++ b/src/assets/scss/components/_main--website.scss
@@ -18,7 +18,7 @@
   @media screen and (min-width: 768px) {
     .main--website{
         max-height: 100%;
-        max-width: calc(100% - 87px);      
+        max-width: 100%;      
     }
   }
   @media screen and (min-width: 1024px) {
