--- a/src/assets/scss/components/_container--project.scss
+++ b/src/assets/scss/components/_container--project.scss
@@ -2,51 +2,59 @@
     color: white;
     position: relative;
     display: inline-block;
-    .project--left{
-        display: flex;
-        align-items: center;
-        
-              
-          
-           ul{
-               padding: 0;
-               li{
-                display: flex;
-                align-items: left;
-                margin-bottom: 1rem;
-                flex-direction: column;
-               }   
-               span{
-                color: #abababb8;
-                letter-spacing: 0.1rem;
-                font-weight: 100;
-                font-size: 0.8rem;
-                margin-top: 0.8rem;
-            }               
-              
-           }
-         
-          
+    padding: 0;
+    margin: 0;
+    header{
+        max-height: 311px;
+        overflow: hidden;
+        position: relative;
+        height: 311px;
+        opacity: 0.4;
+        h2{
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            color:rgb(255, 255, 255);
+            font-size: 3rem;      
+            display: flex;
+            align-items: center;
+            text-align: center;
+            width: 100%;
+            align-content: center;
+            justify-content: center;
+            opacity: 1;
+        }
+        img{
+            width:100%;
+            opacity: 0.5;
         }
     }
-    .project--right{
-        display: flex;
-        align-items: center;
-       position: relative;
-        margin: 0 15px 0 15px;
-        height:100vh;
-        justify-content: center;
-        // padding-left: 8rem;
-       
+
+    .project--content{
+        h2{
+            font-size: 2rem;
+        }
+        p{
+            font-weight: 100;
+        }
+        img{
+     
+        }
+    
+    }
 }
+ 
 @media (min-width:320px){
     .container--project{
-        // top: 70px;
+  position: absolute;
+    left: 0;
+    right: 0;
     }
 }
 
 @media (min-width:1024px){
     .container--project{
         top: 0px;
+        margin: auto;
     }
 }
