--- a/src/assets/scss/components/_header--website.scss
+++ b/src/assets/scss/components/_header--website.scss
@@ -2,8 +2,8 @@
 .header--website{
     background-color: var(--bg-header);
     width: 100%;
-    // position: absolute;
-    // z-index: 11;
+ 
+    z-index: 11111111111111;
     .header--logo{
         display: flex;       
         // background-color: var(--bg-logo);   
